test/errors/error30.vult

fun foo() {
  val x = [1];
  val y = x.e;
}